fix colors in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ body {
   text-shadow: 0 0 5px #D900FF, 0 0 10px #D900FF, 0 0 20px #D900FF, 0 0 40px #00E5FF;
 }
 
+/* .light-chromatic-aberration {
+  position: relative;
+  color: #222222;
+} */
+
 .chromatic-aberration {
   position: relative;
   color: white;
@@ -39,6 +44,36 @@ body {
 }
 
 .chromatic-aberration::after {
+  left: -2px;
+  text-shadow: -1px 0 #00E5FF;
+  animation: glitch-anim-2 3s infinite linear alternate-reverse;
+  clip-path: polygon(0 80%, 100% 20%, 100% 100%, 0 100%);
+}
+
+.chromatic-aberration {
+  position: relative;
+  color: white;
+}
+
+.dark-chromatic-aberration::before,
+.dark-chromatic-aberration::after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+}
+
+.dark-chromatic-aberration::before {
+  left: 2px;
+  text-shadow: -1px 0 #ff003c;
+  animation: glitch-anim-1 2s infinite linear alternate-reverse;
+  clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
+}
+
+.dark-chromatic-aberration::after {
   left: -2px;
   text-shadow: -1px 0 #00E5FF;
   animation: glitch-anim-2 3s infinite linear alternate-reverse;
